# MLOPS_Assignment_2

./: .gitignore  Dockerfile  GLUEDataModule.py  GLUETransformer.py  README.md  docker-compose.yml  example_usage.md  mlops_hyperparameter_tuning_beni (3).ipynb  pyproject.toml  run_docker.ps1  sweep.py  train.py
