[project]
name = "project-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.5"
dependencies = [
    "datasets>=4.2.0",
    "evaluate>=0.4.6",
    "ipywidgets>=8.1.7",
    "lightning>=2.5.5",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "wandb>=0.22.2",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
]
